Bug 451704 - Arrow hitbox does not match visuals in tree view
Summary: Arrow hitbox does not match visuals in tree view
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: details mode (other bugs)
Version First Reported In: 22.03.80
Platform: Other Linux
: HI normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: regression
: 452216 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-03-19 22:51 UTC by Antonio Rojas
Modified: 2022-04-04 10:54 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antonio Rojas 2022-03-19 22:51:06 UTC
In details view, clicking on the expander arrows no longer works. If you turn on selection indicators, clicking on the folder icons does expand the folder. With selection indicators on, there is only like a one pixel wide area to the left of the icon where you can click to expand.

Also, clicking on the selection indicators doesn't work either, which has probably the same root cause.
Comment 1 Nate Graham 2022-03-27 04:00:36 UTC
Can reproduce. Possibly a regression from the RTL work. https://invent.kde.org/system/dolphin/-/commit/ddba4f5fd88c4fa855e3f2eb0d9d95a6290d150a and look suspicious, but I'll bisect.
Comment 2 Nate Graham 2022-03-27 04:12:53 UTC
Yep, git bisect says it was https://invent.kde.org/system/dolphin/-/commit/ddba4f5fd88c4fa855e3f2eb0d9d95a6290d150a.

Jan, can you take a look?
Comment 3 Antonio Rojas 2022-04-03 11:35:36 UTC
*** Bug 452216 has been marked as a duplicate of this bug. ***
Comment 4 Felix Ernst 2022-04-04 10:54:54 UTC
Git commit a4f9974daf1e533c39f67129b85193ad4d47e5ad by Felix Ernst.
Committed on 04/04/2022 at 10:54.
Pushed by felixernst into branch 'release/22.04'.

Revert "KStandardItemListWidget: handle RtL drawing properly"

This reverts commit 3ce9d1d19e081fbb9acf020f15652175673bcf5c.
This reverts commit ddba4f5fd88c4fa855e3f2eb0d9d95a6290d150a.

Aside from the two bugs mentioned below, this also fixes another
regression: The spacing on the left of the view does now once again
follow the size of its column header.
Related: bug 451341

M  +16   -65   src/kitemviews/kstandarditemlistwidget.cpp

https://invent.kde.org/system/dolphin/commit/a4f9974daf1e533c39f67129b85193ad4d47e5ad