make name label and separators follow name column header in ltr mode

BUG: 451704